TIMR-2729 - Fixed layout of IVD reporting page so input values can be seen on smaller devices

--- a/OpenIZMobile.Applets/css/theme.css
+++ b/OpenIZMobile.Applets/css/theme.css
@@ -416,7 +416,9 @@ a.not-active {
     height:100%;
     overflow:scroll;
 }
-
+.scroll-x {
+    overflow-x: auto;
+}
 .white-text{
     color:white;
 }
